<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/listMaNT"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/maNhaThuoc"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:id="@+id/listTenNT"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/tenNhaThuoc"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:id="@+id/listDiaChi"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/diaChi"
            android:layout_marginRight="5dp"
            />
        <Button
            android:id="@+id/xoa"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/xoa"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/sua"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/sua"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
</LinearLayout>