<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/themNhaThuoc"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maNhaThuoc"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtMaNhaThuoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/maNhaThuoc"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenNhaThuoc"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtTenNhaThuoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Tên Nhà Thuốc"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diaChi"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtDiaChi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Địa Chỉ"
            android:inputType="textPersonName"
            android:layout_marginBottom="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xacNhan"
                app:backgroundTint="#4CAF50"
                />

            <Button
                android:id="@+id/btnXacNhanThemNT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huy"
                app:backgroundTint="#4CAF50"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>